--- a/HitFinder.ipynb
+++ b/HitFinder.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +69,12 @@
     "        hitLogic = np.array([(True if pi < baselineVal - nNoiseSigmaThreshold * noiseInADC else False) for pi in filter_p])\n",
     "    else:\n",
     "        hitLogic = np.array([(True if pi < baselineVal - nNoiseSigmaThreshold * noiseInADC else False) for pi in p])\n",
-    "    return hitLogic\n"
+    "    return [hitLogic, baselineVal, noiseInADC]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
     "                              sgFilter=True,\n",
     "                              sgWindow=15,\n",
     "                              sgPolyOrder=3):\n",
-    "    hitLogic = WaveformDiscriminator(p=p, \n",
+    "    [hitLogic, baseline, noiseSigma] = WaveformDiscriminator(p=p, \n",
     "                                     nNoiseSigmaThreshold=nNoiseSigmaThreshold, \n",
     "                                     sgFilter=sgFilter, \n",
     "                                     sgWindow=sgWindow, \n",
@@ -117,13 +117,13 @@
     "                for j in range(i, i + countDuration):\n",
     "                    hitLogic[j] = True\n",
     "    \n",
-    "    return hitLogic\n",
+    "    return [hitLogic, baseline, noiseSigma]\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,108 +135,115 @@
     "              sgFilter=True,\n",
     "              sgWindow=15,\n",
     "              sgPolyOrder=3):\n",
-    "    hitLogic = DiscriminatorConditioning(p=p,\n",
+    "    [hitLogic, baseline, noiseSigma] = DiscriminatorConditioning(p=p,\n",
     "                         durationTheshold=durationTheshold,\n",
     "                         adjDurationThreshold=adjDurationThreshold,\n",
     "                         nNoiseSigmaThreshold=nNoiseSigmaThreshold,\n",
     "                         sgFilter=sgFilter,\n",
     "                         sgWindow=sgWindow,\n",
     "                         sgPolyOrder=sgPolyOrder)\n",
-    "    deriv_p = scisig.savgol_filter(p, window_length=sgWindow, polyorder=sgPolyOrder, deriv=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def checkExtremaInWindow(deriv, hitLogic, startIndex):\n",
-    "    countDuration = 0\n",
-    "    for i in range(startIndex, np.size(deriv) - 1):\n",
-    "        countDuration = countDuration + 1\n",
-    "        if not hitLogic[i + 1]:\n",
-    "            break\n",
     "    \n",
-    "    extremaIndex = startIndex\n",
-    "    for i in range(startIndex, startIndex + countDuration):\n",
-    "        if ():\n",
-    "            extremaIndex = i"
+    "    hitStartIndexList = np.zeros(0)\n",
+    "    for i in range(1, np.size(hitLogic)):\n",
+    "        if ((not hitLogic[i-1]) and hitLogic[i]) and hitLogic[i]:\n",
+    "            hitAmplitude = 1E100\n",
+    "            hitPeakIndex = i\n",
+    "            for j in range(i, np.size(hitLogic)-1):\n",
+    "                if p[j] < hitAmplitude:\n",
+    "                    hitAmplitude = p[j]\n",
+    "                    hitPeakIndex = j\n",
+    "                if not hitLogic[j+1]:\n",
+    "                    break\n",
+    "            ThresholdADC = baseline - (cfdThreshold * (baseline - hitAmplitude))\n",
+    "            \n",
+    "            hitStartIndex = i\n",
+    "            exactStartIndex = False\n",
+    "            for j in range(hitPeakIndex, 0, -1):\n",
+    "                if p[j] == ThresholdADC:\n",
+    "                    hitStartIndex = j\n",
+    "                    exactStartIndex = True\n",
+    "                    break\n",
+    "                if (p[j] < ThresholdADC and p[j - 1] > ThresholdADC):\n",
+    "                    hitStartIndex = j\n",
+    "                    break\n",
+    "                    \n",
+    "            if exactStartIndex:\n",
+    "                hitStartIndexList = np.append(hitStartIndexList, hitStartIndex)\n",
+    "            else:\n",
+    "                if hitStartIndex >= 3:\n",
+    "                    V2 = p[hitStartIndex]\n",
+    "                    t2 = hitStartIndex\n",
+    "                    V1 = p[hitStartIndex - 1]\n",
+    "                    t1 = hitStartIndex - 1\n",
+    "                    m = (V2 - V1) / (t2 - t1)\n",
+    "                    extrapolatedHitStartIndex = ((ThresholdADC - V1) / m) + t1\n",
+    "                    hitStartIndexList = np.append(hitStartIndexList, extrapolatedHitStartIndex)\n",
+    "    \n",
+    "    return [hitStartIndexList, hitLogic, baseline, noiseSigma]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "timeSample = 0.2 # nanosec\n",
-    "nSamples = 1024 # no. of sampling points in a trigger\n",
-    "speAmplitude = 0.15 # single photon-electron response amplitude in volt, noise sigma is 1/10 of the speAmplitude\n",
-    "riseTime = 1.5 # nanosec\n",
-    "fallTime = 3 # nanosec\n",
-    "nBits = 12 # 12bit ADC\n",
-    "voltMin = -0.9 # minimum voltage ADC in volt\n",
-    "dynamicRange = 1 # dynamic range of ADC\n",
-    "offset = 2000 # offset ADC\n",
+    "timeSample = 0.2  # nanosec\n",
+    "nSamples = 1024  # no. of sampling points in a trigger\n",
+    "speAmplitude = 0.15  # single photon-electron response amplitude in volt, noise sigma is 1/10 of the speAmplitude\n",
+    "riseTime = 1.5  # nanosec\n",
+    "fallTime = 3  # nanosec\n",
+    "nBits = 12  # 12bit ADC\n",
+    "voltMin = -0.9  # minimum voltage ADC in volt\n",
+    "dynamicRange = 1  # dynamic range of ADC\n",
+    "offset = 2000  # offset ADC\n",
+    "\n",
+    "cfdThreshold = 0.2  # CFD threshold\n",
+    "durationTheshold = 10  # hit finder alg param: duration of a detected peak to be considered a hit\n",
+    "adjDurationThreshold = 10  # hit finder alg param: duration between two detected peaks to be considered a single hit\n",
+    "nNoiseSigmaThreshold = 1.5  # adcThreshold = (noise threshold) * nNoiseSigmaThreshold + baseline\n",
+    "sgFilter = True  # using Golay-Savitzky filter \n",
+    "sgWindow = 15  # sg sliding window\n",
+    "sgPolyOrder = 3  # sg smoothing polynomial order\n",
+    "\n",
     "for i in range(10):\n",
-    "    [t, p, true_p] = swg.aDigitizedTrigger(dt=timeSample, \n",
-    "                                           nsamples=nSamples, \n",
-    "                                           speAmplitude=speAmplitude, \n",
-    "                                           riseTime=riseTime, \n",
-    "                                           fallTime=fallTime, \n",
-    "                                           nBits=nBits, \n",
-    "                                           voltMin=voltMin, \n",
-    "                                           dynamicRange=dynamicRange, \n",
+    "    [t, p, true_p] = swg.aDigitizedTrigger(dt=timeSample,\n",
+    "                                           nsamples=nSamples,\n",
+    "                                           speAmplitude=speAmplitude,\n",
+    "                                           riseTime=riseTime,\n",
+    "                                           fallTime=fallTime,\n",
+    "                                           nBits=nBits,\n",
+    "                                           voltMin=voltMin,\n",
+    "                                           dynamicRange=dynamicRange,\n",
     "                                           offset=offset)\n",
-    "    \n",
-    "    durationTheshold=10\n",
-    "    adjDurationThreshold=10\n",
-    "    nNoiseSigmaThreshold=1\n",
-    "    sgFilter=True\n",
-    "    sgWindow=15\n",
-    "    sgPolyOrder=3\n",
-    "    hitLogic = DiscriminatorConditioning(p=p,\n",
-    "                         durationTheshold=durationTheshold,\n",
-    "                         adjDurationThreshold=adjDurationThreshold,\n",
-    "                         nNoiseSigmaThreshold=nNoiseSigmaThreshold,\n",
-    "                         sgFilter=sgFilter,\n",
-    "                         sgWindow=sgWindow,\n",
-    "                         sgPolyOrder=sgPolyOrder)\n",
-    "    filter_p = scisig.savgol_filter(x=p, window_length=sgWindow, polyorder=sgPolyOrder)\n",
-    "    \n",
-    "    [baselineVal, noiseADC] = FindDigitizedPedestal(p=p, m=3, nBits=12, dynamicRange=1)\n",
-    "    threshold = np.array([baselineVal - nNoiseSigmaThreshold*noiseADC for ti in t])\n",
-    "    \n",
-    "    plt.plot(t, p, t, filter_p, t, threshold)\n",
-    "    plt.show()\n",
     "\n",
-    "    plt.plot(t, hitLogic)\n",
-    "    plt.show()"
+    "    [hitList, hitLogic, baseline, noiseSigma] = HitFinder(p=p,\n",
+    "                                                          cfdThreshold=cfdThreshold,\n",
+    "                                                          durationTheshold=durationTheshold,\n",
+    "                                                          adjDurationThreshold=adjDurationThreshold,\n",
+    "                                                          nNoiseSigmaThreshold=nNoiseSigmaThreshold,\n",
+    "                                                          sgFilter=sgFilter,\n",
+    "                                                          sgWindow=sgWindow,\n",
+    "                                                          sgPolyOrder=sgPolyOrder)\n",
+    "    \n",
+    "    filter_p = scisig.savgol_filter(x=p, \n",
+    "                                    window_length=sgWindow, \n",
+    "                                    polyorder=sgPolyOrder)\n",
+    "    if np.size(hitList) > 0:\n",
+    "        plt.plot(t, true_p, t, p)\n",
+    "        for x in hitList:\n",
+    "            if x < 1024 and x >= 0:\n",
+    "                plt.axvline(x=(x*0.2))\n",
+    "        plt.show()\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "range object index out of range",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-c2663ed6fc28>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: range object index out of range"
-     ],
-     "output_type": "error"
-    }
-   ],
-   "source": [
-    "\n",
-    "a=range(0,5,1)\n",
-    "a[5]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
