CFD tested. Need to write validation.

--- a/HitFinder.ipynb
+++ b/HitFinder.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
     "                                    window_length=sgWindow, \n",
     "                                    polyorder=sgPolyOrder)\n",
     "    if np.size(hitList) > 0:\n",
-    "        plt.plot(t, true_p, t, p)\n",
+    "        plt.plot(t, p, )\n",
     "        for x in hitList:\n",
     "            if x < 1024 and x >= 0:\n",
     "                plt.axvline(x=(x*0.2))\n",
