--- a/TestCFD.ipynb
+++ b/TestCFD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -12,19 +12,53 @@
     "import matplotlib.pyplot as plt\n",
     "import SiPMWaveGen as swg\n",
     "import scipy.signal as scisig\n",
-    "import CFDHitFinder as cfd"
+    "import CFDHitFinder as cfd\n",
+    "\n",
+    "def CheckInCoincidenceWindow(hitStartUpstream,\n",
+    "                              hitListDownstream,\n",
+    "                              coincidenceWindowLowerLim,\n",
+    "                              coincidenceWindowUpperLim):\n",
+    "    coincidenceList = np.zeros(0)\n",
+    "\n",
+    "    for i_ds in range(0, np.size(hitListDownstream)):\n",
+    "        timeDiff = hitListDownstream[i_ds] - hitStartUpstream;\n",
+    "        if timeDiff > coincidenceWindowLowerLim and timeDiff < coincidenceWindowUpperLim:\n",
+    "            coincidenceList = np.append(coincidenceList, hitListDownstream[i_ds])\n",
+    "\n",
+    "    return coincidenceList\n",
+    "\n",
+    "\n",
+    "def TimeMatching(hitListUpstream,\n",
+    "                 hitListDownstream,\n",
+    "                 coincidenceWindowLowerLim,\n",
+    "                 coincidenceWindowUpperLim):\n",
+    "    matchedHitList = np.zeros([1,2])\n",
+    "    for i_us in range(0, np.size(hitListUpstream)):\n",
+    "        coincidenceList = CheckInCoincidenceWindow(hitStartUpstream=hitListUpstream[i_us],\n",
+    "                                                   hitListDownstream=hitListDownstream,\n",
+    "                                                   coincidenceWindowLowerLim=coincidenceWindowLowerLim,\n",
+    "                                                   coincidenceWindowUpperLim=coincidenceWindowUpperLim)\n",
+    "        for i_ds in range(0, np.size(coincidenceList)):\n",
+    "            matchedHitList = np.append(matchedHitList, [[(hitListUpstream[i_us]), (hitListDownstream[i_ds])]], \n",
+    "                                       axis=0)\n",
+    "            hitListDownstream[i_ds] = 0;\n",
+    "            \n",
+    "    if np.shape(matchedHitList)[0] > 1:\n",
+    "        matchedHitList = np.delete(matchedHitList, (0), axis=0)\n",
+    "        \n",
+    "    return matchedHitList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "timeSample = 0.2  # nanosec\n",
     "nSamples = 1024  # no. of sampling points in a trigger\n",
     "speAmplitude = 0.15  # single photon-electron response amplitude in volt\n",
-    "noiseSigmaInVolt = speAmplitude / 15 # noise sigma\n",
+    "noiseSigmaInVolt = speAmplitude / 30  # noise sigma\n",
     "riseTime = 1.5  # nanosec\n",
     "fallTime = 3  # nanosec\n",
     "nBits = 12  # 12bit ADC\n",
@@ -40,37 +74,69 @@
     "sgWindow = 15  # sg sliding window\n",
     "sgPolyOrder = 3  # sg smoothing polynomial order\n",
     "\n",
-    "for i in range(10):\n",
-    "    [t, p, true_p] = swg.aDigitizedTrigger(dt=timeSample,\n",
-    "                                           nsamples=nSamples,\n",
-    "                                           speAmplitude=speAmplitude,\n",
-    "                                           noiseSigmaInVolt=noiseSigmaInVolt,\n",
-    "                                           riseTime=riseTime,\n",
-    "                                           fallTime=fallTime,\n",
-    "                                           nBits=nBits,\n",
-    "                                           voltMin=voltMin,\n",
-    "                                           dynamicRange=dynamicRange,\n",
-    "                                           offset=offset)\n",
+    "for i in range(1):\n",
+    "    [t1, p1, true_p1] = swg.aDigitizedTrigger(dt=timeSample,\n",
+    "                                              nsamples=nSamples,\n",
+    "                                              speAmplitude=speAmplitude,\n",
+    "                                              noiseSigmaInVolt=noiseSigmaInVolt,\n",
+    "                                              riseTime=riseTime,\n",
+    "                                              fallTime=fallTime,\n",
+    "                                              nBits=nBits,\n",
+    "                                              voltMin=voltMin,\n",
+    "                                              dynamicRange=dynamicRange,\n",
+    "                                              offset=offset)\n",
     "\n",
-    "    [hitList, hitLogic, baseline, noiseSigma] = cfd.HitFinder(p=p,\n",
-    "                                                              noiseSigmaInVolt=speAmplitude/15,\n",
-    "                                                              cfdThreshold=cfdThreshold,\n",
-    "                                                              durationTheshold=durationTheshold,\n",
-    "                                                              adjDurationThreshold=adjDurationThreshold,\n",
-    "                                                              nNoiseSigmaThreshold=nNoiseSigmaThreshold,\n",
-    "                                                              sgFilter=sgFilter,\n",
-    "                                                              sgWindow=sgWindow,\n",
-    "                                                              sgPolyOrder=sgPolyOrder)\n",
+    "    [t2, p2, true_p2] = swg.aDigitizedTrigger(dt=timeSample,\n",
+    "                                              nsamples=nSamples,\n",
+    "                                              speAmplitude=speAmplitude,\n",
+    "                                              noiseSigmaInVolt=noiseSigmaInVolt,\n",
+    "                                              riseTime=riseTime,\n",
+    "                                              fallTime=fallTime,\n",
+    "                                              nBits=nBits,\n",
+    "                                              voltMin=voltMin,\n",
+    "                                              dynamicRange=dynamicRange,\n",
+    "                                              offset=offset)\n",
     "\n",
-    "    filter_p = scisig.savgol_filter(x=p,\n",
-    "                                    window_length=sgWindow,\n",
-    "                                    polyorder=sgPolyOrder)\n",
-    "    if np.size(hitList) > 0:\n",
-    "        plt.plot(t, p, 'r')\n",
-    "        for x in hitList:\n",
-    "            if x < 1024 and x >= 0:\n",
-    "                plt.axvline(x=(x * 0.2))\n",
-    "        plt.show()\n"
+    "    [hitList1, hitLogic1, baseline1, noiseSigma1] = cfd.HitFinder(p=p1,\n",
+    "                                                                  noiseSigmaInVolt=noiseSigmaInVolt,\n",
+    "                                                                  cfdThreshold=cfdThreshold,\n",
+    "                                                                  durationTheshold=durationTheshold,\n",
+    "                                                                  adjDurationThreshold=adjDurationThreshold,\n",
+    "                                                                  nNoiseSigmaThreshold=nNoiseSigmaThreshold,\n",
+    "                                                                  sgFilter=sgFilter,\n",
+    "                                                                  sgWindow=sgWindow,\n",
+    "                                                                  sgPolyOrder=sgPolyOrder)\n",
+    "\n",
+    "    [hitList2, hitLogic2, baseline2, noiseSigma2] = cfd.HitFinder(p=p2,\n",
+    "                                                                  noiseSigmaInVolt=noiseSigmaInVolt,\n",
+    "                                                                  cfdThreshold=cfdThreshold,\n",
+    "                                                                  durationTheshold=durationTheshold,\n",
+    "                                                                  adjDurationThreshold=adjDurationThreshold,\n",
+    "                                                                  nNoiseSigmaThreshold=nNoiseSigmaThreshold,\n",
+    "                                                                  sgFilter=sgFilter,\n",
+    "                                                                  sgWindow=sgWindow,\n",
+    "                                                                  sgPolyOrder=sgPolyOrder)\n",
+    "\n",
+    "    matchedHitList = TimeMatching(hitListUpstream=hitList1*timeSample,\n",
+    "                                  hitListDownstream=hitList2*timeSample,\n",
+    "                                  coincidenceWindowLowerLim=25,\n",
+    "                                  coincidenceWindowUpperLim=35)\n",
+    "\n",
+    "    plt.figure(1)\n",
+    "\n",
+    "    plt.subplot(211)\n",
+    "    plt.plot(t1, p1, 'r')\n",
+    "    plt.ylim(offset, offset + 2 ** nBits)\n",
+    "    for x in hitList1:\n",
+    "        plt.axvline(x=(x * timeSample))\n",
+    "\n",
+    "    plt.subplot(212)\n",
+    "    plt.plot(t2, p2, 'r')\n",
+    "    plt.ylim(offset, offset + 2 ** nBits)\n",
+    "    for x in hitList2:\n",
+    "        plt.axvline(x=(x * timeSample))\n",
+    "\n",
+    "    plt.show()\n"
    ]
   },
   {
