--- a/TestCFD.ipynb
+++ b/TestCFD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -51,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "timeSample = 0.2  # nanosec\n",
-    "nSamples = 1024  # no. of sampling points in a trigger\n",
+    "nSamples = 200  # no. of sampling points in a trigger\n",
     "speAmplitude = 0.15  # single photon-electron response amplitude in volt\n",
-    "noiseSigmaInVolt = speAmplitude / 30  # noise sigma\n",
+    "noiseSigmaInVolt = speAmplitude / 20  # noise sigma\n",
     "riseTime = 1.5  # nanosec\n",
     "fallTime = 3  # nanosec\n",
     "nBits = 12  # 12bit ADC\n",
@@ -74,7 +74,7 @@
     "sgWindow = 15  # sg sliding window\n",
     "sgPolyOrder = 3  # sg smoothing polynomial order\n",
     "\n",
-    "for i in range(1):\n",
+    "for i in range(40):\n",
     "    [t1, p1, true_p1] = swg.aDigitizedTrigger(dt=timeSample,\n",
     "                                              nsamples=nSamples,\n",
     "                                              speAmplitude=speAmplitude,\n",
@@ -129,15 +129,49 @@
     "    plt.ylim(offset, offset + 2 ** nBits)\n",
     "    for x in hitList1:\n",
     "        plt.axvline(x=(x * timeSample))\n",
+    "    for j in range(0, np.shape(matchedHitList)[0]):\n",
+    "        if matchedHitList[j, 0] == 0 and matchedHitList[j, 1] == 0:\n",
+    "            continue\n",
+    "        x1 = matchedHitList[j, 0]\n",
+    "        x2 = matchedHitList[j, 1]\n",
+    "        plt.fill_betweenx(y=range(offset, offset + 2**nBits),\n",
+    "                          x1=x1, \n",
+    "                          x2=x2, \n",
+    "                          facecolor='green', \n",
+    "                          alpha=0.5)\n",
     "\n",
     "    plt.subplot(212)\n",
     "    plt.plot(t2, p2, 'r')\n",
     "    plt.ylim(offset, offset + 2 ** nBits)\n",
     "    for x in hitList2:\n",
     "        plt.axvline(x=(x * timeSample))\n",
+    "    for j in range(0, np.shape(matchedHitList)[0]):\n",
+    "        if matchedHitList[j, 0] == 0 and matchedHitList[j, 1] == 0:\n",
+    "            continue\n",
+    "        x1 = matchedHitList[j, 0]\n",
+    "        x2 = matchedHitList[j, 1]\n",
+    "        plt.fill_betweenx(y=range(offset, offset + 2**nBits),\n",
+    "                          x1=x1, \n",
+    "                          x2=x2, \n",
+    "                          facecolor='green', \n",
+    "                          alpha=0.5)\n",
     "\n",
     "    plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
